style.css
@font-face { /* Définition d'une nouvelle police nommée CAC Champagne */
    font-family: 'opensans_regular';
    src: url('Font/opensans_regular_macroman/opensans-regular-webfont.eot');
    src: url('Font/opensans_regular_macroman/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('Font/opensans_regular_macroman/opensans-regular-webfont.woff') format('woff'),
         url('Font/opensans_regular_macroman/opensans-regular-webfont.ttf') format('truetype'),
         url('Font/opensans_regular_macroman/opensans-regular-webfont.svg#open_sansregular') format('svg');
}

@font-face {
    font-family: 'satisfyregular';
    src: url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.eot');
    src: url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.woff2') format('woff2'),
         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.woff') format('woff'),
         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.ttf') format('truetype'),
         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.svg#satisfyregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
a, a:visited, a:hover, a:active {
    text-decoration: none;
    color: black;
}
a:hover
{
	color: #E6E0CB;
}

body
{
	margin: 0;
	font-family: 'opensans_regular',  Helvetica, Arial, sans-serif;


}

#bloc_page
{
	margin: auto;

}



nav
{

	color: #0B5A4A;

	font-size: 2em;
	padding: 2vh;



	border-bottom: 6px solid #E6E0CB;

}
nav ul
{
	list-style-type: none;
	display: flex;
	flex-direction: row;
	justify-content: space-between;

	margin: 0px;
	padding: 0px;
}
nav a:hover
{
	color:  #009900;
}
#logo
{
	font-family: 'satisfyregular','opensans_regular',  Helvetica, Arial, sans-serif; 
}
#menu
{
	display: flex;
	flex-direction: row;


}
#menu li
{
	margin: 6px;

}

#Moi
{
	width: 100vw;
	height: 100vh;
	max-width: 100%;

	background: url("Image/backtest.png");
	background-color: #138d75;
	background-size: cover;

	margin: auto;

	font-size: 1.3em;


	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	
	color: #E6E0CB;


}

#Moi p
{
width: 30vw;

}

#Projets
{
text-align: center;

font-size: 2em;


}


#Projets ul
{
	list-style-type: none;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;


	justify-content: space-around;
	

	padding: 0px;


}
#Projets li a img 
{	
	border:4px solid white;
	border-radius: 2px;
}

#Projets li:nth-child(1) a img:hover 
{
	
	border:4px solid #8A2BE2;
	border-radius: 2px;
}
#Projets li:nth-child(2) a img:hover 
{
	
	border:4px solid #DB7093;
	border-radius: 2px;
}
#Projets li:nth-child(3) a img:hover 
{
	
	border:4px solid #2E8B57;
	border-radius: 2px;
}
#Projets li:nth-child(4) a img:hover 
{
	
	border:4px solid #98FB98;
	border-radius: 2px;
}
#Projets li:nth-child(5) a img:hover 
{
	
	border:4px solid #B22222;
	border-radius: 2px;
}
#Projets li:nth-child(6) a img:hover 
{
	
	border:4px solid black;
	border-radius: 2px;
}






footer
{

	width: 100vw;
	

	max-width: 100%;

	background-color: #138d75;
	background-size: cover;


	display: flex;
	flex-direction: column;

	align-items: center;
	text-align: center;

	color: #E6E0CB;


}
#Contact
{
	display: flex;
	justify-content: space-around;
	
}
#Contact ul
{
	display: flex;
	

	list-style-type: none;
	padding: 0px;


	
}
#Contact li
{
	margin-left: 2vw;
	margin-right: 2vw; 
}

/*sub page*/

#Projets_style
{
	display: flex;
	text-align: center;
	justify-content: space-around;

	margin: 30px;

	font-size: 2em;
	
}

#Projets_style h1
{
	text-align: center;
	color:  #138d75;
}
#Projets_style_main
{
	text-align: left;
	display: flex;
	flex-direction: column;


	background-color: #F0F0F0;

	max-width: 40vw;

	padding-right:  30px;
	padding-left:   30px;
	padding-top: 30px;
	padding-bottom: 30px; 
}
#Projets_style_aside
{
	display: flex;
	flex-direction: column;

	justify-content: center;


	background-color: #F0F0F0;

	max-width: 40vw;

	padding-right:  30px;
	padding-left:   30px;
	padding-top: 30px;
	padding-bottom: 30px; 

	text-align: center;
}

#fract_resize1 img
{
	
	width: 40%;

}
#fract_resize2 img
{

	width: 80%;
}
@media screen and (max-width: 1000px) 
{
#Projets_style
{
 flex-direction: column;
}
#Projets_style_main
{
	max-width: none;
	max-height: none;
}
#Projets_style_aside
{
	max-width: none;
	max-height: none;
}
}

